--- a/big2test.html
+++ b/big2test.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大老二 測試頁面</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,7 +36,7 @@
         /* 內嵌頁面 (iframe) */
         iframe {
             width: 100%;
-            height: 600px;
+            height: 550px;
             border: none;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 5px;
@@ -49,9 +48,9 @@
 
     <!-- 切換三個頁面的按鈕區 -->
     <div class="switch-buttons">
-        <button id="btnSetting">Setting 頁</button>
-        <button id="btnCount">Count 頁</button>
-        <button id="btnScore">Score 頁</button>
+        <button id="btnSetting">Setting</button>
+        <button id="btnCount">Count</button>
+        <button id="btnScore">Score</button>
     </div>
 
     <!-- 內嵌頁面 (iframe) -->
