--- a/big2test.html
+++ b/big2test.html
@@ -21,7 +21,7 @@
             margin: 20px 0;
         }
         .switch-buttons button {
-            padding: 10px 20px;
+            padding: 10px 30px;
             font-size: 1.2em;
             color: white;
             background-color: #707070;
@@ -49,9 +49,9 @@
 
     <!-- 切換三個頁面的按鈕區 -->
     <div class="switch-buttons">
-        <button id="btnSetting">Setting</button>
-        <button id="btnCount">Count</button>
-        <button id="btnScore">Score</button>
+        <button id="btnSetting">設定</button>
+        <button id="btnCount">計分</button>
+        <button id="btnScore">戰績</button>
     </div>
 
     <!-- 內嵌頁面 (iframe) -->
