--- a/count.html
+++ b/count.html
@@ -166,6 +166,8 @@
         <button id="player4Btn">玩家 4</button>
     </div>
 
+ <h1>點選贏家開始計分</h1>
+
     <div class="overlay" id="overlay"></div>
     <div class="modal" id="confirmWinnerModal">
         <p id="confirmWinnerText"></p>
