--- a/score.html
+++ b/score.html
@@ -60,6 +60,7 @@
         .delete-btn:hover {
             background-color: #c9302c;
         }
+        /* 正分紅色的 highlight */
         .highlight {
             color: red;
             font-weight: bold;
@@ -96,7 +97,6 @@
         <thead>
             <tr>
                 <th>回合</th>
-                <!-- 玩家名稱表頭改用設定頁面 players 中的名稱 -->
                 <th id="p1Name"></th>
                 <th id="p2Name"></th>
                 <th id="p3Name"></th>
@@ -113,7 +113,7 @@
     </div>
 
     <script>
-        // 從 localStorage 讀取資料
+        // 讀取 scoresHistory
         let scoresHistory = JSON.parse(localStorage.getItem('scoresHistory')) || [];
         let players = JSON.parse(localStorage.getItem('players')) || {
             player1: "玩家 1",
@@ -128,11 +128,10 @@
         document.getElementById('p3Name').textContent = players.player3;
         document.getElementById('p4Name').textContent = players.player4;
 
-        // 1) 計算與渲染「成績表」(四位玩家總分、勝場數、勝率)
+        // 「成績表」(四位玩家總分、勝場數、勝率)
         function calcSummary() {
             const summaryTableBody = document.getElementById('summaryTable').querySelector('tbody');
 
-            // 若無資料
             if (!scoresHistory.length) {
                 summaryTableBody.innerHTML = `
                     <tr>
@@ -149,9 +148,8 @@
                 player3: { totalScore: 0, winCount: 0 },
                 player4: { totalScore: 0, winCount: 0 }
             };
-            const totalRounds = scoresHistory.length;
 
-            // 遍歷每場紀錄
+            const totalRounds = scoresHistory.length;
             scoresHistory.forEach(round => {
                 const p1 = round.scores?.player1 || 0;
                 const p2 = round.scores?.player2 || 0;
@@ -163,7 +161,6 @@
                 stats.player3.totalScore += p3;
                 stats.player4.totalScore += p4;
 
-                // 分數 > 0 視為該玩家該場勝利
                 if (p1 > 0) stats.player1.winCount++;
                 if (p2 > 0) stats.player2.winCount++;
                 if (p3 > 0) stats.player3.winCount++;
@@ -180,9 +177,8 @@
                     ? Math.round((pWinCount / totalRounds) * 100)
                     : 0;
 
-                // 若要正分紅字
+                // 若 totalScore > 0 就套用 highlight
                 const scoreClass = (pScore > 0) ? 'highlight' : '';
-
                 const tr = document.createElement('tr');
                 tr.innerHTML = `
                     <td>${playerName}</td>
@@ -194,11 +190,9 @@
             }
         }
 
-        // 2) 顯示「逐場成績」： 最新場次顯示在最上方
+        // 「逐場成績」： 最新場次顯示在最上方 & 正分紅色
         function renderScores() {
             const scoresTableBody = document.getElementById('scoresTable').querySelector('tbody');
-
-            // 若無紀錄
             if (!scoresHistory.length) {
                 scoresTableBody.innerHTML = `
                     <tr>
@@ -208,34 +202,38 @@
                 return;
             }
 
-            // 先清空
             scoresTableBody.innerHTML = '';
-            
-            // 最新場次顯示在最上方 => 逆序遍歷 scoresHistory
+            // 逆序遍歷 -> 最新場次最上方
             for (let idx = scoresHistory.length - 1; idx >= 0; idx--) {
                 const roundData = scoresHistory[idx];
                 const row = document.createElement('tr');
+
                 const p1Score = roundData.scores.player1 || 0;
                 const p2Score = roundData.scores.player2 || 0;
                 const p3Score = roundData.scores.player3 || 0;
                 const p4Score = roundData.scores.player4 || 0;
 
-                // idx 從最後往前 => (scoresHistory.length - idx) => "回合"顯示
-                const roundNum = idx + 1; 
-                // 或者您想顯示為 (scoresHistory.length - idx)，即 1=最新 => 自行調整
+                // 若想回合顯示：scoresHistory.length - idx
+                const roundNum = idx + 1;
+
+                // 判斷正分 => highlight
+                const p1Class = (p1Score > 0) ? 'highlight' : '';
+                const p2Class = (p2Score > 0) ? 'highlight' : '';
+                const p3Class = (p3Score > 0) ? 'highlight' : '';
+                const p4Class = (p4Score > 0) ? 'highlight' : '';
 
                 row.innerHTML = `
                     <td>${roundNum}</td>
-                    <td>${p1Score}</td>
-                    <td>${p2Score}</td>
-                    <td>${p3Score}</td>
-                    <td>${p4Score}</td>
+                    <td class="${p1Class}">${p1Score}</td>
+                    <td class="${p2Class}">${p2Score}</td>
+                    <td class="${p3Class}">${p3Score}</td>
+                    <td class="${p4Class}">${p4Score}</td>
                 `;
                 scoresTableBody.appendChild(row);
             }
         }
 
-        // 3) 清除分數
+        // 清除分數(只移除scoresHistory)
         document.getElementById('clearScoresBtn').addEventListener('click', () => {
             if (confirm('確定要清除所有分數嗎？此動作無法恢復！')) {
                 localStorage.removeItem('scoresHistory');
@@ -244,7 +242,7 @@
             }
         });
 
-        // 初始化：計算 & 顯示
+        // 初始化
         calcSummary();
         renderScores();
     </script>
