--- a/setting.html
+++ b/setting.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>設定遊戲規則</title>
     <style>
         body {
@@ -76,25 +76,25 @@
         <!-- 玩家名稱 -->
         <div class="form-group">
             <label for="player1">玩家 1 名稱</label>
-            <input type="text" id="player1" placeholder="輸入玩家 1 名稱" value="玩家 1" required>
+            <input type="text" id="player1" placeholder="輸入玩家 1 名稱" required>
         </div>
         <div class="form-group">
             <label for="player2">玩家 2 名稱</label>
-            <input type="text" id="player2" placeholder="輸入玩家 2 名稱" value="玩家 2" required>
+            <input type="text" id="player2" placeholder="輸入玩家 2 名稱" required>
         </div>
         <div class="form-group">
             <label for="player3">玩家 3 名稱</label>
-            <input type="text" id="player3" placeholder="輸入玩家 3 名稱" value="玩家 3" required>
+            <input type="text" id="player3" placeholder="輸入玩家 3 名稱" required>
         </div>
         <div class="form-group">
             <label for="player4">玩家 4 名稱</label>
-            <input type="text" id="player4" placeholder="輸入玩家 4 名稱" value="玩家 4" required>
+            <input type="text" id="player4" placeholder="輸入玩家 4 名稱" required>
         </div>
 
         <!-- 規則：倍率 -->
         <div class="form-group">
             <label for="multiplier">倍率</label>
-            <input type="number" id="multiplier" placeholder="輸入倍率" value="1" min="1" required>
+            <input type="number" id="multiplier" placeholder="輸入倍率" required>
         </div>
 
         <!-- 規則：勾選 -->
@@ -112,15 +112,15 @@
     </form>
 
     <script>
-        // 預設值初始化
+        // 1) 初始化預設資料 (可選)
         function initializeSettings() {
-            const players = JSON.parse(localStorage.getItem('players')) || {
+            const existingPlayers = JSON.parse(localStorage.getItem('players')) || {
                 player1: "玩家 1",
                 player2: "玩家 2",
                 player3: "玩家 3",
                 player4: "玩家 4"
             };
-            const settings = JSON.parse(localStorage.getItem('settings')) || {
+            const existingSettings = JSON.parse(localStorage.getItem('settings')) || {
                 multiplier: 1,
                 rules: {
                     rule7: false,
@@ -129,24 +129,32 @@
                 }
             };
 
-            // 設定玩家名稱
-            document.getElementById('player1').value = players.player1 || "玩家 1";
-            document.getElementById('player2').value = players.player2 || "玩家 2";
-            document.getElementById('player3').value = players.player3 || "玩家 3";
-            document.getElementById('player4').value = players.player4 || "玩家 4";
+            // 預先填好輸入框
+            document.getElementById('player1').value = existingPlayers.player1;
+            document.getElementById('player2').value = existingPlayers.player2;
+            document.getElementById('player3').value = existingPlayers.player3;
+            document.getElementById('player4').value = existingPlayers.player4;
 
-            // 設定倍率
-            document.getElementById('multiplier').value = settings.multiplier || 1;
+            document.getElementById('multiplier').value = existingSettings.multiplier;
 
-            // 設定規則勾選
-            document.getElementById('rule7').checked = settings.rules.rule7 || false;
-            document.getElementById('rule10').checked = settings.rules.rule10 || false;
-            document.getElementById('rule13').checked = settings.rules.rule13 || false;
+            document.getElementById('rule7').checked  = existingSettings.rules.rule7;
+            document.getElementById('rule10').checked = existingSettings.rules.rule10;
+            document.getElementById('rule13').checked = existingSettings.rules.rule13;
         }
 
-        // 儲存設定
+        // 2) focus 時自動清空欄位
+        function enableAutoClearOnFocus() {
+            // 取得所有文字與數字輸入欄位
+            const inputs = document.querySelectorAll('input[type="text"], input[type="number"]');
+            inputs.forEach((input) => {
+                input.addEventListener('focus', () => {
+                    input.value = "";
+                });
+            });
+        }
+
+        // 3) 儲存按鈕邏輯
         document.getElementById('saveButton').addEventListener('click', function() {
-            // 收集玩家名稱
             const players = {
                 player1: document.getElementById('player1').value.trim(),
                 player2: document.getElementById('player2').value.trim(),
@@ -154,7 +162,6 @@
                 player4: document.getElementById('player4').value.trim()
             };
 
-            // 收集規則
             const settings = {
                 multiplier: parseFloat(document.getElementById('multiplier').value),
                 rules: {
@@ -164,15 +171,15 @@
                 }
             };
 
-            // 儲存到 localStorage
+            // 儲存
             localStorage.setItem('players', JSON.stringify(players));
             localStorage.setItem('settings', JSON.stringify(settings));
-
             alert('設定已儲存！');
         });
 
-        // 初始化預設值
+        // 初始化
         initializeSettings();
+        enableAutoClearOnFocus();
     </script>
 </body>
 </html>
