--- a/count.html
+++ b/count.html
@@ -157,7 +157,7 @@
     <br>
     <br>
 
-    <div class="rules" id="rulesDisplay">規則：請先完成牌局設定...</div>
+    <div class="rules" id="rulesDisplay">規則：請先完成設定...</div>
 
     <div class="player-buttons">
         <button id="player1Btn">玩家 1</button>
