--- a/setting.html
+++ b/setting.html
@@ -99,7 +99,7 @@
 
         <!-- 規則：勾選 -->
         <div class="form-group">
-            <label>勾選規則</label>
+            <label>Double規則</label>
             <div class="checkbox-group">
                 <label><input type="checkbox" id="rule7"> 7 張</label>
                 <label><input type="checkbox" id="rule10"> 10 張</label>
