--- a/count.html
+++ b/count.html
@@ -149,7 +149,8 @@
   </style>
 </head>
 <body>
-  <h1>大老二計分</h1>
+
+  <br>
 
   <!-- 主頁面規則顯示 -->
   <div class="rules" id="rulesDisplay">規則：讀取中...</div>
@@ -160,6 +161,8 @@
       <button id="player3Btn">玩家 3</button>
       <button id="player4Btn">玩家 4</button>
   </div>
+
+<h1>點選贏家開始計分</h1>
 
   <div class="overlay" id="overlay"></div>
   <div class="modal" id="confirmWinnerModal">
